feat: add requirement analysis time

--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
                         </div>
 
                         <div class="input-container">
+                            <label for="requirements-analysis">Requirement analysis time, <strong>H</strong></label>
+                            <input type="text" name="Requirement analysis time" id="requirements-analysis">
+                        </div>
+
+                        <div class="input-container">
                             <label for="communication-time">Time for communication, <strong>%</strong></label>
                             <input type="text" name="Time for communication (%)" id="communication-time">
                         </div>
